# tetanux

./: Cargo.toml  tetanux.conf
src/: cli.rs  config.rs  main.rs
