[package]
name = "tetanux"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
#hyper = { version = "1.7.0", features = ["full"] }
#hyper-util = { version = "0.1.17", features = ["full"] } 
#http-body = "1.0.1"
#http-body-util = "0.1.3"
#bytes = "1"
httparse = "1.10.1"
#reqwest = "0.12.24"
http-request = "8.91.29"
url = "2.5.7"